Add tweets.html with embedded tweet and navigation links

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -22,6 +22,8 @@
   <p>HTML allows you to create the structure of webpages, and it’s surprisingly simple to start with.</p>
 
   <p>Enrolled in ALX frontend development program, which is for 16 weeks.</p>
+  <p><a href="tweets.html">Check out my latest tweets →</a></p>
+
 
  
 </body>
